Update .gitignore for the possibility of changed folder names

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,22 @@
 addons/[^.]*
 !addons/3dovoice/
 addons/3dovoice/.*
+!addons/081-3dovoice/
+addons/081-3dovoice/.*
 !addons/mm-hd/
 addons/mm-hd/.*
+!addons/mm-081-hd/
+addons/mm-081-hd/.*
 !addons/volasaurus-remix-pack/
 addons/volasaurus-remix-pack/.*
+!addons/081-volsremix/
+addons/081-volsremix/.*
 !addons/sol-textures-hd/
 addons/sol-textures-hd/.*
 !addons/sol-textures-sd/
 addons/sol-textures-sd/.*
-!addons/classic-hd-fonts/
-addons/classic-hd-fonts/.*
-!addons/dos-planets/
-addons/dos-planets/.*
+!addons/081-soltex-hd/
+addons/081-soltex-hd/.*
+!addons/081-soltex-sd/
+addons/081-soltex-sd/.*
 *.uqm
