Add HD-mod classic background stars to classic pack
Along with rescaling the nebulae and making the black portion of them transparent

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ addons/sol-textures-hd/.*
 addons/sol-textures-sd/.*
 !addons/automods-hd/
 addons/automods-hd/.*
+!addons/classic-pack/
+addons/classic-pack/.*
 *.uqm
