Include distorted-hayes package in the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,7 @@ addons/3do-mode-hd/.*
 addons/dos-mode-sd/.*
 !addons/dos-mode-hd/
 addons/dos-mode-hd/.*
+!addons/distorted-hayes/
+addons/distorted-hayes/.*
 *.uqm
 .vs
